# github-issues-context-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/github_issues_context_extractor/: extractor.py
